--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
                                         href="site/setting.html"
                                 >账号设置</a
                                 >
-                                <a class="dropdown-item text-center" href="site/login.html"
+                                <a class="dropdown-item text-center" th:href="@{/logout}"
                                 >退出登录</a
                                 >
                                 <div class="dropdown-divider"></div>
