--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,18 +37,18 @@
                         <li class="nav-item ml-3 btn-group-vertical">
                             <a class="nav-link" th:href="@{/index}">首页</a>
                         </li>
-                        <li class="nav-item ml-3 btn-group-vertical">
+                        <li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser!=null}">
                             <a class="nav-link position-relative" href="site/letter.html"
                             >消息<span class="badge badge-danger">12</span></a
                             >
                         </li>
-                        <li class="nav-item ml-3 btn-group-vertical">
+                        <li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
                             <a class="nav-link" th:href="@{/register}">注册</a>
                         </li>
-                        <li class="nav-item ml-3 btn-group-vertical">
+                        <li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser==null}">
                             <a class="nav-link" th:href="@{/login}">登录</a>
                         </li>
-                        <li class="nav-item ml-3 btn-group-vertical dropdown">
+                        <li class="nav-item ml-3 btn-group-vertical dropdown" th:if="${loginUser!=null}">
                             <a
                                     class="nav-link dropdown-toggle"
                                     href="#"
@@ -59,7 +59,7 @@
                                     aria-expanded="false"
                             >
                                 <img
-                                        src="http://images.nowcoder.com/head/1t.png"
+                                        th:src="${loginUser.headerUrl}"
                                         class="rounded-circle"
                                         style="width: 30px"
                                 />
@@ -72,7 +72,7 @@
                                 >
                                 <a
                                         class="dropdown-item text-center"
-                                        href="site/setting.html"
+                                        th:href="@{/user/setting}"
                                 >账号设置</a
                                 >
                                 <a class="dropdown-item text-center" th:href="@{/logout}"
@@ -80,6 +80,7 @@
                                 >
                                 <div class="dropdown-divider"></div>
                                 <span class="dropdown-item text-center text-secondary"
+                                      th:utext="${loginUser.username}"
                                 >nowcoder</span
                                 >
                             </div>
