--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -123,6 +123,7 @@
                         class="btn btn-primary btn-sm position-absolute rt-0"
                         data-toggle="modal"
                         data-target="#publishModal"
+                        th:if="${loginUser!=null}"
                 >
                     我要发布
                 </button>
