--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a
                                         class="dropdown-item text-center"
-                                        href="site/profile.html"
+                                        th:href="@{|/user/profile/${loginUser.id}|}"
                                 >个人主页</a
                                 >
                                 <a
@@ -210,10 +210,10 @@
 
             <!-- 帖子列表 -->
             <ul class="list-unstyled">
-<!--                <input id="noteId" type="text" th:value="${discussPosts}"/>-->
+                <!--                <input id="noteId" type="text" th:value="${discussPosts}"/>-->
                 <li class="media pb-3 pt-3 mb-3 border-bottom"
                     th:each="map:${discussPosts}">
-                    <a href="site/profile.html">
+                    <a th:href="@{|user/profile/${map.user.id}|}">
                         <img th:src="${map.user.headerUrl}"
                              class="mr-4 rounded-circle"
                              alt="用户头像"
